Use correct immutable map builder in DbmsOperator